--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>Fictional UI sample</title>
+  <title>Fictional UI</title>
   <link rel="icon" href="favicon/x32.png" sizes="32x32" type="image/png" />
   <link href='http://fonts.googleapis.com/css?family=Share+Tech+Mono' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <ul id="log"></ul>
-  <span id="title">Fictional UI sample</span>
+  <span id="title">Fictional UI</span>
   <span class="version">Ver.0.0.1</span>
   <small id="copyright">&copy; 2012 <a href="http://saucer.jp" class="saucer-web">SAUCER.JP</a></small>
 
