--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  <ul id="log"></ul>
-  <span id="title">Fictional UI</span>
-  <span class="version">Ver.0.0.1</span>
-  <small id="copyright">&copy; 2013 <a href="http://saucer.jp" class="saucer-web">SAUCER.JP</a></small>
+  <div id="container">
+    <ul id="log"></ul>
+    <footer>
+      <span id="title">Fictional UI</span>
+      <span class="version">Ver.0.0.1</span>
+      <small id="copyright">&copy; 2013 <a href="http://saucer.jp" class="saucer-web">SAUCER.JP</a></small>
+    </footer>
+  </div>
 
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
   <script type="text/javascript" src="js/app.js"></script>
