SVG生成方法をcreateElementからcloneに変更

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
   <div id="container">
     <ul class="hexSighters">
       <li class="hexSighter">
+        <ul class="precisions">
+          <li></li>
+          <li></li>
+        </ul>
         <svg width="126" height="136" viewBox="-10 -10 126 136" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
           <defs>
             <filter id="hex1" x="0" y="0" width="120" height="120">
