--- a/index.html
+++ b/index.html
@@ -9,6 +9,26 @@
 </head>
 <body>
   <div id="container">
+    <div class="svg_container-corner_top-left">
+      <svg width="80" height="80" viewBox="0 0 80 80" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <polygon points="0 0,80 0,80 1,1 1,1 80,0 80,0 0"/>
+      </svg>
+    </div>
+    <div class="svg_container-corner_top-right">
+      <svg width="80" height="80" viewBox="0 0 80 80" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <polygon points="0 0,80 0,80 80,79 80,79 1,0 1,0 0"/>
+      </svg>
+    </div>
+    <div class="svg_container-corner_bottom-right">
+      <svg width="80" height="80" viewBox="0 0 80 80" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <polygon points="79 0,80 0,80 80,0 80,0 79,79 79,79 0"/>
+      </svg>
+    </div>
+    <div class="svg_container-corner_bottom-left">
+      <svg width="80" height="80" viewBox="0 0 80 80" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <polygon points="0 0,1 0,1 79,80 79,80 80,0 80,0 0"/>
+      </svg>
+    </div>
     <ul class="hexSighters">
       <li class="hexSighter">
         <ul class="precisions">
