--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <div id="container">
+    <h1>Graphical Web Advent Calendar 2013</h1>
     <div class="svg_container-corner_top-left">
       <svg width="80" height="80" viewBox="0 0 80 80" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
         <polygon points="0 0,80 0,80 1,1 1,1 80,0 80,0 0"/>
