--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
           <polygon class="svg_corner" filter="url(#corner4)" points="0 0,16 0,16 4,4 4,4 16,0 16,0 0" transform="rotate(270)"/>
           <polygon class="svg_tri" filter="url(#tri)" points="0 0,8 3,0 5"/>
           <polygon class="svg_plus" filter="url(#plus)" points="5 0,6 0,6 5,11 5,11 6,6 6,6 11,5 11,5 6,0 6,0 5,5 5"/>
-          <polygon class="svg_hex" filter="url(#hex1)" points="20,70 0,35 20,0 60,0 80,35 60,70" transform="scale(0.9)"/>
-          <polygon class="svg_hex" filter="url(#hex2)" points="20,70 0,35 20,0 60,0 80,35 60,70" transform="scale(0.6)"/>
-          <polygon class="svg_hex" filter="url(#hex3)" points="20,70 0,35 20,0 60,0 80,35 60,70" transform="scale(0.4)"/>
+          <polygon class="svg_hex" filter="url(#hex1)" points="20,70 0,35 20,0 60,0 80,35 60,70" transform="translate(0,0),scale(0.9)"/>
+          <polygon class="svg_hex" filter="url(#hex2)" points="20,70 0,35 20,0 60,0 80,35 60,70" transform="translate(0,0),scale(0.6)"/>
+          <polygon class="svg_hex" filter="url(#hex3)" points="20,70 0,35 20,0 60,0 80,35 60,70" transform="translate(0,0),scale(0.4)"/>
         </svg>
       </li>
     </ul>
