--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
   <div id="container">
     <h1>Graphical Web Advent Calendar 2013</h1>
     <div class="svg_container-corner_top-left">
-      <svg width="80" height="80" viewBox="0 0 80 80" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+      <svg width="80" height="80" viewBox="0 0 80 80">
         <polygon points="0 0,80 0,80 1,1 1,1 80,0 80,0 0"/>
       </svg>
     </div>
     <div class="svg_container-corner_top-right">
-      <svg width="80" height="80" viewBox="0 0 80 80" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+      <svg width="80" height="80" viewBox="0 0 80 80">
         <polygon points="0 0,80 0,80 80,79 80,79 1,0 1,0 0"/>
       </svg>
     </div>
     <div class="svg_container-corner_bottom-right">
-      <svg width="80" height="80" viewBox="0 0 80 80" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+      <svg width="80" height="80" viewBox="0 0 80 80">
         <polygon points="79 0,80 0,80 80,0 80,0 79,79 79,79 0"/>
       </svg>
     </div>
     <div class="svg_container-corner_bottom-left">
-      <svg width="80" height="80" viewBox="0 0 80 80" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+      <svg width="80" height="80" viewBox="0 0 80 80">
         <polygon points="0 0,1 0,1 79,80 79,80 80,0 80,0 0"/>
       </svg>
     </div>
@@ -36,7 +36,7 @@
           <li></li>
           <li></li>
         </ul>
-        <svg width="126" height="136" viewBox="-10 -10 126 136" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <svg width="126" height="136" viewBox="-10 -10 126 136">
           <defs>
             <filter id="hex1" x="0" y="0" width="120" height="120">
               <feGaussianBlur stdDeviation="1" result="blur"/>
